# forge

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: config-file.md  slack-channel-setup.md  sse-events.md  warm-wake.md
docs/plans/: 2026-06-19-forge-phase1-agent-spine.md  2026-06-23-forge-env-layer-clickable-url.md  2026-06-24-forge-chat-frontend.md  2026-07-02-github-review-trigger.md  2026-07-06-live-workspace.md
docs/specs/: 2026-06-19-forge-design.md  2026-06-23-forge-env-layer-clickable-url-design.md  2026-06-24-forge-chat-frontend-design.md  2026-06-24-supabase-multi-instance-design.md  2026-06-25-slack-conversational-chat-design.md  2026-06-25-slack-multilingual-routing-and-dm-threading-design.md  2026-07-02-github-review-trigger-design.md  2026-07-03-universal-recipes-design.md  2026-07-06-agent-browser-live-view-design.md  2026-07-06-concise-pr-descriptions-design.md  2026-07-06-live-workspace-design.md  2026-07-06-self-heal-web-design.md  2026-07-07-live-files-view-design.md  2026-07-07-review-inline-live-design.md
docs/superpowers/plans/: 2026-07-07-review-inline-live.md
spike/: .oauth-token
src/forge/: appserver.py  browserview.py  budget.py  cli.py  commands.py  compose.py  compose_orchestrator.py  composeenv.py  config.py  configfile.py  container.py  creds.py  envprobe.py  envreg.py  eventbus.py  events.py  flow.py  ghapp.py  ghwebhook.py  health.py  hostops.py  inbox.py  knowledge.py  lifecycle.py  models.py  nextdev.py  orchestrator.py  plan.py  prbody.py  probing.py  prompts.py  providers.py  proxy.py  prref.py  qa.py  recipe.py  reporesolve.py  repos.py  retrospective.py  review.py  (+21 more)
tests/: conftest.py  test_admission.py  test_appserver.py  test_browserview.py  test_budget.py  test_cli.py  test_commands.py  test_commands_stream.py  test_compose.py  test_compose_orchestrator.py  test_compose_smoke.py  test_composeenv.py  test_composeenv_stream.py  test_config.py  test_config_identity.py  test_configfile.py  test_container_publish.py  test_container_smoke.py  test_creds.py  test_env_smoke.py  test_envprobe.py  test_envreg.py  test_eventbus.py  test_flow.py  test_ghapp.py  test_ghwebhook.py  test_health.py  test_hostops_local.py  test_inbox.py  test_knowledge.py  test_lifecycle.py  test_models.py  test_nextdev.py  test_node_web_smoke.py  test_orchestrator.py  test_plan.py  test_prbody.py  test_probing.py  test_prompts.py  test_providers.py  (+49 more)
web/: README.md  package-lock.json  package.json  vite.config.ts
web/src/: AgentView.tsx  App.tsx  AppFrame.test.ts  AppFrame.tsx  BatchComposer.tsx  Chat.tsx  DiffView.tsx  ErrorBoundary.tsx  FilesView.tsx  Inspector.tsx  PlanCard.tsx  SessionFolder.tsx  SessionRow.tsx  Sidebar.tsx  VerifyView.tsx  Workspace.tsx  agentBrowser.test.ts  agentBrowser.ts  api.test.ts  api.ts  chatReducer.test.ts  chatReducer.ts  coworker.test.ts  coworker.ts  deepLink.test.ts  deepLink.ts  diff.test.ts  diffModel.ts  filesModel.test.ts  filesModel.ts  filterSessions.test.ts  filterSessions.ts  liveFeed.test.ts  liveFeed.ts  main.tsx  modelChoices.test.ts  modelChoices.ts  queueSummary.test.ts  queueSummary.ts  sessionGroups.test.ts  (+11 more)
worker-image/: Dockerfile
