[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-agent"
version = "0.1.0"
description = "AI coding coworker: disposable Docker environments, verified changes, and PRs that read like a colleague's — driven from Slack or a web UI on your Claude/ChatGPT subscription."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Forge contributors" }]
keywords = ["ai", "agent", "claude", "codex", "docker", "code-review", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
slack = ["slack_bolt>=1.18"]
gh-app = ["pyjwt>=2.8", "cryptography>=42"]

[project.urls]
# TODO: point these at your fork once published.
Homepage = "https://github.com/your-org/forge"
Repository = "https://github.com/your-org/forge"

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
