[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "edvin-not-devin"
version = "0.1.0"
description = "Personal AI coding coworker experiment (Edvin, not Devin): disposable Docker environments, verified changes, and PRs — driven from Slack or a web UI on your Claude/ChatGPT subscription."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Edvin" }]
keywords = ["ai", "agent", "claude", "codex", "docker", "code-review", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
slack = ["slack_bolt>=1.18"]
gh-app = ["pyjwt>=2.8", "cryptography>=42"]

[project.urls]
Homepage = "https://github.com/edvinstava/edvin-not-devin"
Repository = "https://github.com/edvinstava/edvin-not-devin"

[project.scripts]
edvin-not-devin = "forge.cli:main"
# The project began life as "forge" and the internals keep that name; this
# short alias matches the FORGE_* env vars, ~/.forge/ config dir, and docs.
forge = "forge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
