[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.1.0"
description = "Autonomous software engineering on your own machine: disposable Docker environments, verified changes, and PRs — driven from Slack or a web UI on your Claude/ChatGPT subscription. (Edvin, not Devin.)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Edvin" }]
keywords = ["ai", "agent", "claude", "codex", "docker", "code-review", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
slack = ["slack_bolt>=1.18"]
gh-app = ["pyjwt>=2.8", "cryptography>=42"]

[project.urls]
Homepage = "https://github.com/edvinstava/forge"
Repository = "https://github.com/edvinstava/forge"

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
